# structgen

./: CMakeLists.txt  README.md  README_CMAKE.md  build.spec  pyproject.toml  structgen.cmake  structgenConfig.cmake.in
structgen/: __init__.py  builder.py  cli.py  grammar.lark  parser.py  template.h  writter.py
tests/: example.st
