[project]
name = "structgen"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandre J.",email = "72853501+snaporteur@users.noreply.github.com"}
]
requires-python = ">=3.13"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "click (>=8.4.1,<9.0.0)",
    "lark (>=1.3.1,<2.0.0)"
]


[project.scripts]
structgen = "structgen.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
